compiler/tests/snapshots/snapshot_thir__thir_complex_pdl.snap
---
source: compiler/tests/snapshot_thir.rs
expression: output
---
ThirContext summary
  extracted directives:
    mem_bytes: 134217728
    tick_rate_hz: 10000
    timer_spin: None
    overrun_policy: drop
    wait_timeout_ms: 50
  param_cpp_types:
    agc_gain -> float
  indexed entries:
    tasks: [analysis, capture, monitor]
    consts: [bp_coeff, lp_coeff]
    params: [agc_gain]
    sets: [mem, overrun]
    binds: []
