compiler/tests/snapshots/snapshot_thir__thir_multirate_pdl.snap
---
source: compiler/tests/snapshot_thir.rs
expression: output
---
ThirContext summary
  extracted directives:
    mem_bytes: 67108864
    tick_rate_hz: 10000
    timer_spin: None
    overrun_policy: drop
    wait_timeout_ms: 50
  param_cpp_types:
    (none)
  indexed entries:
    tasks: [analyzer]
    consts: [lp_coeff]
    params: []
    sets: []
    binds: []
